--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Issue Tracker: </title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style>
+    	.well{
+    		overflow-wrap: break-word;
+    	}
+    	
+
+
+
+
+    </style>
   </head>
   <body onload="fetchIssues()">
     <div class="container">
@@ -33,9 +43,11 @@
           <button type="submit" class="btn btn-primary">Add</button>
         </form>
       </div>
-      <div class="col-lg-12">
-        <div id="issuesList">
+      <div class="container d-block">
+      	<div class="col-lg-12 w-100">
+        	<div id="issuesList">
         </div>
+      </div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
